feat(assessment): 시험 시간 저장